--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 							<time>3月29日</time>
 						</span>
 					</header>
-					<h3><a href="pid_Responsive/index.html"><span>pid</span> <strong>响应式网站</strong></a></h3>
+					<h3><a href="http://xueyif.github.io/pid_Responsive/index.html"><span>pid</span> <strong>响应式网站</strong></a></h3>
 					<div class="clearFix">
 						<span>责任描述：</span><p>负责跨浏览器兼容实现/网站页面前端开发制作/负责网页制作及前端交互开发/参与网站架构开发。</p>
 						<span>项目简介：</span><p>本项目是的商城网站，客户要求突出产品的优势、对网站进行整体设计制作。</p>
@@ -171,7 +171,7 @@
 				<div class=" vertical2"></div>
 				<span class="circle3"><span></span></span>
 				<div class="vertical5"></div>
-				<a href="javascript:;" class="pidImg"><span></span><img src="image/pid.png"/></a>
+				<a href="http://xueyif.github.io/pid_Responsive/index.html" class="pidImg"><span></span><img src="image/pid.png"/></a>
 				<div class=" vertical3"></div>
 				<span class="circle4"></span>
 			</li>
