--- a/youyike_PC/index.html
+++ b/youyike_PC/index.html
@@ -66,9 +66,9 @@
 							<img src="img/pid.png"/>
 						</a>
 						<div>
-							<h3><a href="../pid_Responsive/index.html">汇爱婚礼</a></h3>
+							<h3><a href="../pid_Responsive/index.html">pid</a></h3>
 							<p>Date:2016-01-31</p>
-							<p>所属行业：<a href="javascript:;">企业集团</a></p>
+							<p>所属行业：<a href="javascript:;">响应式</a></p>
 						</div>
 					</li>
 					<li>
@@ -76,9 +76,9 @@
 							<img src="img/tmall.png"/>
 						</a>
 						<div>
-							<h3><a href="../Tmall_PC/index.html">汇爱婚礼</a></h3>
+							<h3><a href="../Tmall_PC/index.html">天猫</a></h3>
 							<p>Date:2016-01-31</p>
-							<p>所属行业：<a href="javascript:;">企业集团</a></p>
+							<p>所属行业：<a href="javascript:;">PC端</a></p>
 						</div>
 					</li>
 					<li>
@@ -86,9 +86,9 @@
 							<img src="img/uehtml.png"/>
 						</a>
 						<div>
-							<h3><a href="../UETHML_Responsive/index.html">汇爱婚礼</a></h3>
+							<h3><a href="../UETHML_Responsive/index.html">UE设计平台</a></h3>
 							<p>Date:2016-01-31</p>
-							<p>所属行业：<a href="javascript:;">企业集团</a></p>
+							<p>所属行业：<a href="javascript:;">响应式</a></p>
 						</div>
 					</li>
 					<li>
@@ -96,9 +96,9 @@
 							<img src="img/yinyuetai.png"/>
 						</a>
 						<div>
-							<h3><a href="../Yinyuetai_Mobile/index.html">汇爱婚礼</a></h3>
+							<h3><a href="../Yinyuetai_Mobile/index.html">音悦台</a></h3>
 							<p>Date:2016-01-31</p>
-							<p>所属行业：<a href="javascript:;">企业集团</a></p>
+							<p>所属行业：<a href="javascript:;">移动端</a></p>
 						</div>
 					</li>
 					<li>
@@ -106,9 +106,9 @@
 							<img src="img/pid2.png"/>
 						</a>
 						<div>
-							<h3><a href="../pid_Responsive/index.html">汇爱婚礼</a></h3>
+							<h3><a href="../pid_Responsive/index.html">pid</a></h3>
 							<p>Date:2016-01-31</p>
-							<p>所属行业：<a href="javascript:;">企业集团</a></p>
+							<p>所属行业：<a href="javascript:;">响应式</a></p>
 						</div>
 					</li>
 					<li>
@@ -116,9 +116,9 @@
 							<img src="img/tmall2.png"/>
 						</a>
 						<div>
-							<h3><a href="../Tmall_Mobile/index.html">汇爱婚礼</a></h3>
+							<h3><a href="../Tmall_Mobile/index.html">天猫</a></h3>
 							<p>Date:2016-01-31</p>
-							<p>所属行业：<a href="javascript:;">企业集团</a></p>
+							<p>所属行业：<a href="javascript:;">移动端</a></p>
 						</div>
 					</li>
 					<li>
