--- a/index.html
+++ b/index.html
@@ -164,8 +164,9 @@
 					</header>
 					<h3><a href="http://xueyif.github.io/pid_Responsive/index.html"><span>pid</span> <strong>响应式网站</strong></a></h3>
 					<div class="clearFix">
-						<span>责任描述：</span><p>负责跨浏览器兼容实现/网站页面前端开发制作/负责网页制作及前端交互开发/参与网站架构开发。</p>
-						<span>项目简介：</span><p>本项目是的商城网站，客户要求突出产品的优势、对网站进行整体设计制作。</p>
+						<span>责任描述：</span><p>1、使用C3的Media Query创建响应式网站。<br/>2、使用jquery库实现动态效果。<br/>3、实现网页制作及前端交互开发。<br/>4、实现网站架构开发。</p>
+						<span>项目简介：</span><p>项目可以支持不同分辨率的设备，易用、强大、快捷，可以快捷解决多种设备显示的适应问题。
+						</p>
 					</div>
 				</section>
 				<div class=" vertical2"></div>
@@ -191,8 +192,8 @@
 					</header>
 					<h3><a href="http://xueyif.github.io/Yinyuetai_Mobile/index.html"><span>音悦台</span> <strong>移动端</strong></a></h3>
 					<div class="clearFix">
-						<span>责任描述：</span><p>负责跨浏览器兼容实现/网站页面前端开发制作/负责网页制作及前端交互开发/参与网站架构开发。</p>
-						<span>项目简介：</span><p>本项目是的商城网站，客户要求突出产品的优势、对网站进行整体设计制作。</p>
+						<span>责任描述：</span><p>1、使用了rem布局，兼容性强。<br/>2、使用touch事件实现用户手指所做的交互。<br/>3、使用JS、CSS等效果的实现。</p>
+						<span>项目简介：</span><p>项目可以兼容Mozilla Firefox 3.6+、Apple Safari 5+、Google Chrome、IE9+和Opera11+ 等。</p>
 					</div>
 				</section>
 				<div class=" vertical2"></div>
@@ -218,8 +219,8 @@
 					</header>
 					<h3><a href="http://xueyif.github.io/Tmall_PC/index.html"><span>天猫</span> <strong>PC端</strong></a></h3>
 					<div class="clearFix">
-						<span>责任描述：</span><p>负责跨浏览器兼容实现/网站页面前端开发制作/负责网页制作及前端交互开发/参与网站架构开发。</p>
-						<span>项目简介：</span><p>本项目是的商城网站，客户要求突出产品的优势、对网站进行整体设计制作。</p>
+						<span>责任描述：</span><p>1、使用jquery库实现动态效果。<br/>2、实现网页制作及前端交互开发。<br/>3、实现网站架构开发。<br/>4、使用css雪碧,减少加载图片时对服务器的请求次数,提高加载速度。</p>
+						<span>项目简介：</span><p>本项目是商城网站，对网站进行整体设计制作、使用特殊JS、CSS、雪碧实现最终的技术方案。</p>
 					</div>
 				</section>
 				<div class=" vertical2"></div>
@@ -245,8 +246,8 @@
 					</header>
 					<h3><a href="http://xueyif.github.io/Tmall_Mobile/index.html"><span>天猫</span> <strong>移动端</strong></a></h3>
 					<div class="clearFix">
-						<span>责任描述：</span><p>负责跨浏览器兼容实现/网站页面前端开发制作/负责网页制作及前端交互开发/参与网站架构开发。</p>
-						<span>项目简介：</span><p>本项目是的商城网站，客户要求突出产品的优势、对网站进行整体设计制作。</p>
+						<span>责任描述：</span><p>1、使用了rem布局，兼容性强。<br/>2、使用touch事件实现用户手指所做的交互。<br/>3、使用JS、C3等实现最终效果。</p>
+						<span>项目简介：</span><p>项目可以兼容Mozilla Firefox 3.6+、Apple Safari 5+、Google Chrome、IE9+和Opera11+ 等。</p>
 					</div>
 				</section>
 				<div class=" vertical2"></div>
@@ -272,8 +273,8 @@
 					</header>
 					<h3><a href="http://xueyif.github.io/UETHML_Responsive/index.html"><span>UEHTML</span> <strong>响应式网站</strong></a></h3>
 					<div class="clearFix">
-						<span>责任描述：</span><p>负责跨浏览器兼容实现/网站页面前端开发制作/负责网页制作及前端交互开发/参与网站架构开发。</p>
-						<span>项目简介：</span><p>本项目是的商城网站，客户要求突出产品的优势、对网站进行整体设计制作。</p>
+						<span>责任描述：</span><p>1、使用C3的Media Query创建响应式网站。<br/>2、使用jquery库、c3实现动态效果。<br/>3、实现网页制作及前端交互开发。<br/>4、实现网站架构开发。</p>
+						<span>项目简介：</span><p>项目可以支持不同分辨率的设备，易用、强大、快捷，可以快捷解决多种设备显示的适应问题。</p>
 					</div>
 				</section>
 				<div class=" vertical2"></div>
@@ -299,8 +300,8 @@
 					</header>
 					<h3><a href="http://xueyif.github.io/youyike_PC/"><span>优艺客</span> <strong>响应式网站</strong></a></h3>
 					<div class="clearFix">
-						<span>责任描述：</span><p>负责跨浏览器兼容实现/网站页面前端开发制作/负责网页制作及前端交互开发/参与网站架构开发。</p>
-						<span>项目简介：</span><p>本项目是的商城网站，客户要求突出产品的优势、对网站进行整体设计制作。</p>
+						<span>责任描述：</span><p>1、使用了纯原生js与c3为页面添加交互行为。<br/>2、兼容各浏览器的兼容性问题。</p>
+						<span>项目简介：</span><p>本项目使用了纯原生js，对网站进行整体动态效果制作。</p>
 					</div>
 				</section>
 				<div class=" vertical2"></div>
