--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 						<img src="image/time.png">
 						<span>
 							<p>2016</p>
-							<time>3月29日</time>
+							<time>2月19日</time>
 						</span>
 					</header>
 					<h3><a href="http://xueyif.github.io/pid_Responsive/index.html"><span>pid</span> <strong>响应式网站</strong></a></h3>
@@ -187,7 +187,7 @@
 						<img src="image/time.png">
 						<span>
 							<p>2016</p>
-							<time>3月29日</time>
+							<time>3月06日</time>
 						</span>
 					</header>
 					<h3><a href="http://xueyif.github.io/Yinyuetai_Mobile/index.html"><span>音悦台</span> <strong>移动端</strong></a></h3>
@@ -214,7 +214,7 @@
 						<img src="image/time.png">
 						<span>
 							<p>2016</p>
-							<time>3月29日</time>
+							<time>3月15日</time>
 						</span>
 					</header>
 					<h3><a href="http://xueyif.github.io/Tmall_PC/index.html"><span>天猫</span> <strong>PC端</strong></a></h3>
@@ -241,7 +241,7 @@
 						<img src="image/time.png">
 						<span>
 							<p>2016</p>
-							<time>3月29日</time>
+							<time>3月24日</time>
 						</span>
 					</header>
 					<h3><a href="http://xueyif.github.io/Tmall_Mobile/index.html"><span>天猫</span> <strong>移动端</strong></a></h3>
@@ -268,7 +268,7 @@
 						<img src="image/time.png">
 						<span>
 							<p>2016</p>
-							<time>3月29日</time>
+							<time>3月26日</time>
 						</span>
 					</header>
 					<h3><a href="http://xueyif.github.io/UETHML_Responsive/index.html"><span>UEHTML</span> <strong>响应式网站</strong></a></h3>
@@ -295,10 +295,10 @@
 						<img src="image/time.png">
 						<span>
 							<p>2016</p>
-							<time>3月29日</time>
+							<time>4月02日</time>
 						</span>
 					</header>
-					<h3><a href="http://xueyif.github.io/youyike_PC/"><span>优艺客</span> <strong>响应式网站</strong></a></h3>
+					<h3><a href="http://xueyif.github.io/youyike_PC/"><span>优艺客</span> <strong>PC端</strong></a></h3>
 					<div class="clearFix">
 						<span>责任描述：</span><p>1、使用了纯原生js与c3为页面添加交互行为。<br/>2、兼容各浏览器的兼容性问题。</p>
 						<span>项目简介：</span><p>本项目使用了纯原生js，对网站进行整体动态效果制作。</p>
@@ -308,6 +308,33 @@
 				<span class="circle3"><span></span></span>
 				<div class="vertical5"></div>
 				<a href="http://xueyif.github.io/youyike_PC/" class="pidImg"><span></span><img src="image/youyike.png"/></a>
+				<div class=" vertical3"></div>
+				<span class="circle4"></span>
+			</li>
+			<li class="opus6">
+				<p class="me3"><span>俺</span><span>的</span><span>实</span><span>战</span><span>经</span><span>验</span></p>
+				<span class="circle"></span>
+				<div class=" vertical"></div>
+				<span class="circle2"><span></span></span>
+				<div class="vertical4"></div>
+				<section class="pid">
+					<header>
+						<img src="image/time.png">
+						<span>
+							<p>2015</p>
+							<time>7月23日</time>
+						</span>
+					</header>
+					<h3><a href="http://xueyif.github.io/BaiDuVIP_PC/"><span>百度音乐VIP</span> <strong>PC端</strong></a></h3>
+					<div class="clearFix">
+						<span>责任描述：</span><p>1、使用css雪碧,减少加载图片时对服务器的请求次数,提高加载速度。<br/>2、实现网页制作及前端交互开发。<br/>3、实现网站架构开发。</p>
+						<span>项目简介：</span><p>本项目兼容性强，对网站进行整体设计制作、使用CSS、雪碧实现最终的技术方案。</p>
+					</div>
+				</section>
+				<div class=" vertical2"></div>
+				<span class="circle3"><span></span></span>
+				<div class="vertical5"></div>
+				<a href="http://xueyif.github.io/BaiDuVIP_PC/" class="pidImg"><span></span><img src="image/baidu.png"/></a>
 				<div class=" vertical3"></div>
 				<span class="circle4"></span>
 			</li>
