--- a/youyike_PC/index.html
+++ b/youyike_PC/index.html
@@ -18,7 +18,7 @@
 	</div>
 	<section id="opus">
 		<div style="display: block;">
-			<a href="javascript:;" class="img"><img src="img/works.jpg"/></a>
+			<div class="img"><img src="img/works.jpg"/></div>
 			<p class="introduce">10年建站经验 + 500家企业客户 + 顶尖建站团队 = UEMO高端企业模板。 打造出适合中小企业的高端企业模板-UEMO，精致的设计，人性化的后台，让UEMO成为您建站的首选。</p>
 			<p class="url">网址：<a href="http://xueyif.github.io/resume">http://xueyif.github.io/resume/</a></p>
 		</div>
@@ -44,10 +44,10 @@
 	<span></span>
 	<ul>
 		<li id="navmove"></li>
-		<li><a href="javascript:;">网站首页</a></li>
-		<li><a href="javascript:;">案例展示</a></li>
-		<li><a href="javascript:;">关于自己</a></li>
-		<li><a href="javascript:;">联系本人</a></li>
+		<li class="navL">网站首页</li>
+		<li class="navL">案例展示</li>
+		<li class="navL">关于自己</li>
+		<li class="navL">联系本人</li>
 	</ul>
 </section>
 <section id="box">
@@ -117,12 +117,12 @@
 					</li>
 					<li>
 						<a href="javascript:;" class="case_a">
-							<img src="img/1454144948220.jpg"/>
+							<img src="img/baidu.png"/>
 						</a>
 						<div>
-							<h3><a href="javascript:;">汇爱婚礼</a></h3>
+							<h3><a href="javascript:;">百度音乐VIP</a></h3>
 							<p>Date:2016-01-31</p>
-							<p>所属行业：<a href="javascript:;">企业集团</a></p>
+							<p>所属行业：<a href="javascript:;">PC端</a></p>
 						</div>
 					</li>
 				</ul>
