--- a/youyike_PC/index.html
+++ b/youyike_PC/index.html
@@ -56,13 +56,23 @@
 			<div id="caseW" style="overflow:hidden;">
 				<ul id="case"  class="clearFix">
 					<li>
+						<a href="http://xueyif.github.io/resume/" class="case_a">
+							<img src="img/resume.png"/>
+						</a>
+						<div>
+							<h3><a href="http://xueyif.github.io/resume/">个人简历</a></h3>
+							<p>Date:2016-04-10</p>
+							<p><a href="javascript:;">PC端</a></p>
+						</div>
+					</li>
+					<li>
 						<a href="../pid_Responsive/index.html" class="case_a">
 							<img src="img/pid.png"/>
 						</a>
 						<div>
 							<h3><a href="../pid_Responsive/index.html">pid</a></h3>
-							<p>Date:2016-01-31</p>
-							<p>所属行业：<a href="javascript:;">响应式</a></p>
+							<p>Date:2016-02-19</p>
+							<p><a href="javascript:;">响应式</a></p>
 						</div>
 					</li>
 					<li>
@@ -71,8 +81,8 @@
 						</a>
 						<div>
 							<h3><a href="../Tmall_PC/index.html">天猫</a></h3>
-							<p>Date:2016-01-31</p>
-							<p>所属行业：<a href="javascript:;">PC端</a></p>
+							<p>Date:2016-03-15</p>
+							<p><a href="javascript:;">PC端</a></p>
 						</div>
 					</li>
 					<li>
@@ -81,8 +91,8 @@
 						</a>
 						<div>
 							<h3><a href="../UETHML_Responsive/index.html">UE设计平台</a></h3>
-							<p>Date:2016-01-31</p>
-							<p>所属行业：<a href="javascript:;">响应式</a></p>
+							<p>Date:2016-03-26</p>
+							<p><a href="javascript:;">响应式</a></p>
 						</div>
 					</li>
 					<li>
@@ -91,8 +101,8 @@
 						</a>
 						<div>
 							<h3><a href="../Yinyuetai_Mobile/index.html">音悦台</a></h3>
-							<p>Date:2016-01-31</p>
-							<p>所属行业：<a href="javascript:;">移动端</a></p>
+							<p>Date:2016-03-16</p>
+							<p><a href="javascript:;">移动端</a></p>
 						</div>
 					</li>
 					<li>
@@ -101,8 +111,8 @@
 						</a>
 						<div>
 							<h3><a href="../pid_Responsive/index.html">pid</a></h3>
-							<p>Date:2016-01-31</p>
-							<p>所属行业：<a href="javascript:;">响应式</a></p>
+							<p>Date:2016-02-19</p>
+							<p><a href="javascript:;">响应式</a></p>
 						</div>
 					</li>
 					<li>
@@ -111,18 +121,28 @@
 						</a>
 						<div>
 							<h3><a href="../Tmall_Mobile/index.html">天猫</a></h3>
-							<p>Date:2016-01-31</p>
-							<p>所属行业：<a href="javascript:;">移动端</a></p>
+							<p>Date:2015-07-23</p>
+							<p><a href="javascript:;">移动端</a></p>
 						</div>
 					</li>
 					<li>
-						<a href="javascript:;" class="case_a">
+						<a href="http://xueyif.github.io/youyike_PC/" class="case_a">
+							<img src="img/youyike.png"/>
+						</a>
+						<div>
+							<h3><a href="http://xueyif.github.io/youyike_PC/">优艺客</a></h3>
+							<p>Date:2015-04-02</p>
+							<p><a href="javascript:;">PC端</a></p>
+						</div>
+					</li>
+					<li>
+						<a href="http://xueyif.github.io/BaiDuVIP_PC/index.html" class="case_a">
 							<img src="img/baidu.png"/>
 						</a>
 						<div>
-							<h3><a href="javascript:;">百度音乐VIP</a></h3>
+							<h3><a href="http://xueyif.github.io/BaiDuVIP_PC/index.html">百度音乐VIP</a></h3>
 							<p>Date:2016-01-31</p>
-							<p>所属行业：<a href="javascript:;">PC端</a></p>
+							<p><a href="javascript:;">PC端</a></p>
 						</div>
 					</li>
 				</ul>
